basic controller and view for proj

--- a/templates/metrics/home.html.twig
+++ b/templates/metrics/home.html.twig
@@ -83,7 +83,7 @@
     <p>
         Enligt Phpmetrics så sänkte jag "Average relative System complexity" med -3.72. <br>
         Game-klassen har sänkt cyclomatic complexity till 5.<br>
-        Game fick ifrån 47 maintainability till 76.67 och blev då gul.<br>
+        Game gick ifrån 47 maintainability till 76.67 och blev då gul.<br>
         <img class="sm-img"src="{{ asset("img/newmetric.png") }}" alt="komplexitet och maintainability">
     </p>
        
