--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -150,6 +150,27 @@
 
         
         <h4>Kmom06</h4>
+       <p>
+           Jag tyckte det var smidigt med phpmetrics. Man fick bra rapporter och den gick igenom koden väldigt fort. Jag tyckte bilden på maintainability och komplexitet var väldigt användbar. Jag vet med mig att jag är dålig på att skriva kommentarer så det var ett snabbt sätt att se vart jag borde lägga mer kraft.<br>
+
+       </p>
+       <p>
+           Det gick bra att komma igång med scrutinizer, det fanns bra förklaringar och det var lätt att koppla det till mitt repo. <br>
+           Scrutinizer tog lite mer tid på sig att gå igenom koden men det var inte så farligt lång tid ändå för så mycket arbete.<br>
+           Jag tycker man fick en bra överblick av sin kod.<br>
+           Efter första bygget fick jag 22% kodtäckning och 9.95 på kodkvalitet.
+       </p>
+       <p>
+           Jag tycker kodkvalitet är svårt att definiera. Kanske ändras definitionen efter vilken situation man är i. Jobbar man i ett stort team med en väldigt stor kodbas så kan jag tänka mig att maintainability och att hålla nere komplexiteten är extra viktigt.
+       </p>
+       <p>
+           Jag tror absolut att kodkvalitet kan vara mätbart och att det då kan visas upp i badges eller mätvärde. <br>
+           Alla gör fel, så att låta ett program gå igenom koden kan vara ett bra sätt att hitta så många fel som möjligt.<br>
+       </p>
+
+       <p>
+           TIL: När man gör ändringar i koden är det lätt att missa vissa delar. Då är det bra med lite extra hjälp ifrån tex scrutinizer så att man ser att man fixat till allting.
+       </p>
         <h4>Kmom10</h4>
     </div>
 </div>
