added basic Square class for poker square

--- a/templates/proj/start.html.twig
+++ b/templates/proj/start.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{% endblock %}
 
 {% block body %}
-<h1>{{ title }}</h1>
+<h1 class="center">{{ title }}</h1>
 
 <div class="gamecontainer">
 
