Added id for start route

--- a/templates/proj/home.html.twig
+++ b/templates/proj/home.html.twig
@@ -22,7 +22,7 @@
     </div>
 </div>
 <div class="center">
-    <button class="start-b"><a href="{{ url("proj-start") }}"> Start</a></button>
+    <button class="start-b"><a href="{{ url("proj-start",{'id': '0'})}}"> Start</a></button>
     <button class="start-b"><a href="{{ url("proj-doc") }}"> Doc</a></button>
 </div>
 
