--- a/public/css/proj.css
+++ b/public/css/proj.css
@@ -66,6 +66,9 @@ td a {
     width: 100%;
     height: 100%;
 }
+td a:hover {
+    background-color: blue;
+}
 
 .gamecontainer {
     margin-left: 5%;
