--- a/templates/proj/result.html.twig
+++ b/templates/proj/result.html.twig
@@ -3,12 +3,36 @@
 {% block title %}{% endblock %}
 
 {% block body %}
+{% set myLoopIndex = 1 %}
 
-<div>
 <h2 class="center">{{title}}</h2>
-<div class="wrapper">
-    <h1>NU ÄR DET SLUT:</h1>
-    <h3>POÄNG</h3>
-</div>
+<div class="result">
+    <div>
+        <table class="deck-table">
+            
+            {% for index in score|batch(5, " ") %}
 
+                    {% for key,value in index %}
+                    <tr>
+                        <th colspan="5">Hand{{myLoopIndex}}</th>
+                        {% set myLoopIndex = myLoopIndex + 1 %}
+                    </tr>
+                    <tr>
+                    {% for key,value in value %}
+                        {% if key|last == '♥' or key|last == '♦'  %}
+                        <td style="color: red ;">{{ key }}</td>
+                        {% else %}
+                        <td s>{{ key }}</td>
+                        {% endif %}
+                        
+                    {% endfor %}
+                    </tr>
+                    
+                    {% endfor %}
+                
+                
+            {% endfor %}
+        </table>
+    </div>
+</div>
 {% endblock %}
