--- a/templates/proj/bg-base.html.twig
+++ b/templates/proj/bg-base.html.twig
@@ -8,6 +8,7 @@
         {% endblock css %}
 
     </head>
+    <div class="bg-div">
     <body>
         <header>
             <nav class="navbar">
@@ -23,6 +24,7 @@
         {% endblock %}
         </div>
     </body>
+    </div>
     {% include "footer.twig" %}
     
 </html>
