--- a/public/css/proj.css
+++ b/public/css/proj.css
@@ -1,46 +1,136 @@
+html {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+
+body {
+    background: rgb(22,36,0);
+    background: linear-gradient(90deg, rgba(22,36,0,1) 0%, rgba(11,121,9,1) 73%, rgba(2,124,11,1) 100%);
+}
+.bg-div {
+    background: url("../img/sidepoker.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
 .center {
     text-align: center;
 }
 
-.h-div {
-    height: 200px;
-    background-image: url("../img/php.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+nav {
+    margin: -8px auto 0;
     position: relative;
+    width: 100%;
+    height: 50px;
+    background-color: #34495e;
+    border-radius: 8px;
+    font-size: 0;
+    }
+nav a {
+    line-height: 50px;
+    height: 100%;
+    font-size: 15px;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    color: white;
+    cursor: pointer;
+}
+nav .animation {
+    position: absolute;
+    height: 100%;
+    top: 0;
+    z-index: 0;
+    transition: all .5s ease 0s;
+    border-radius: 8px;
+}
+.navbar a:nth-child(1) {
+            width: 33%;
+}
+.navbar a:nth-child(2) {
+            width: 33%;
+}
+.navbar a:nth-child(3) {
+            width: 33%;
+}
+nav .start-home, a:nth-child(1):hover~.animation {
+    width: 33%;
+    left: 0;
+    background-color: #1abc9c;
+}
+nav .start-about, a:nth-child(2):hover~.animation {
+    width: 33%;
+    left: 33%;
+    background-color: #d8301d;
+}
+nav .start-blog, a:nth-child(3):hover~.animation {
+    width: 34%;
+    left: 66%;
+    background-color: #0ec70e;
 }
 
-.h-text {
+.deck-table{
+    border-spacing: 12px;
+    border-collapse: separate;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
+}
 
-.navbar {
+.deck-table td{
+    border: 2px solid black;
+    width: 50px;
+    height: 50px;
+    background-color: #b8c1b8;
+}
+
+.deck-table a {
+    display:block;
+    width: 100%;
+    height: 100%;
+}
+.deck-table a:hover {
+    background-color: blue;
+}
+
+.gamecontainer {
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 7%;
+    margin-bottom: 7%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    gap: 15px;
-    margin-top: 1%;
+    justify-content: space-between;
+}
+
+
+.information {
+    width: 20%;
+    text-align: center;
+    align-content: center;
+    background-color: #576a57;
+    border: solid black 3px;
+    padding-bottom: 3%;
     
 }
-
-.navbar a:link, a:visited {
-    background-color: white;
-    color: black;
-    border: 2px solid green;
-    padding: 3px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
+.info-div {
+    border: solid black 5px;
+    font-size: x-large;
+    margin-right: 20%;
+    margin-left: 20%;
+    background-color: bisque;
+}
+.board  {
+    width:60%;
+    font-size: x-large;
 }
 
-.navbar a:hover {
-    background-color: lightgreen;
+.result {
+    display: flex;
+    justify-content: center;
+    margin-top: 3%;
 }
 
 .footer {
@@ -49,45 +139,72 @@
     padding: 20px;
 }
 
-.deck-table{
-    border-spacing: 10px;
+.wrapper {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    color: beige;
+    font-size: large;
+    height: 500px;
+}
+
+.regler {
+    width: 27%;
+    align-self: center;
+    border: 4px solid rgb(23, 157, 9);
+    border-radius: 8px;
+    padding: 20px;
+    background-color: rgb(5, 102, 20); 
+}
+.regler a {
+    color: inherit;
+}
+.score {
+    border: 4px solid rgb(23, 157, 9);
+    border-radius: 8px;
+    padding: 20px;
+    background-color: rgb(5, 102, 20);
+}
+.score-chart {
+    border: solid rgb(143, 165, 143) 3px;
+    border-spacing: 5px;
+    text-align: center;
+}
+.score-chart td {
+    border: solid rgb(143, 165, 143) 2px;
+    pad: 4px;
+}
+
+.play {
+    width: 20%;
+    margin-top: 20%;
+}
+
+.img-holder {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.sm-img-circle {
+    max-width: 100px;
+    border-radius: 50%;
+}
+
+.inside-box {
+    padding: 10px;
+}
+
+.result-table {
+    border-spacing: 2px;
     border-collapse: separate;
     text-align: center;
 }
 
-.deck-table td{
+.result-table td{
     border: 2px solid black;
-    width: 2rem;
-    height: 2rem;
-}
-
-td a {
-    display:block;
-    width: 100%;
-    height: 100%;
-}
-td a:hover {
-    background-color: blue;
-}
-
-.gamecontainer {
-    margin-left: 5%;
-    margin-right: 5%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 2em;
-}
-
-.information {
-    width: auto;
-}
-
-.board  {
-    width:60%;
-}
-
-.result {
-    display: flex;
-    justify-content: center;
+    width: 20px;
+    height: 20px;
+    background-color: #b8c1b8;
 }
