--- a/templates/proj/base.html.twig
+++ b/templates/proj/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="normal">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
@@ -13,7 +13,7 @@
             <nav class="navbar">
                 <a href="{{ url("home") }}"> Home</a>
                 <a href="{{ url("proj-home") }}"> Square </a>
-                <a href="{{ url("proj-home") }}"> Leaderboard </a>
+                <a href="{{ url("leaderboard_show_all") }}"> Leaderboard </a>
                 <div class="animation start-home"></div>
             </nav>
         </header>
@@ -23,6 +23,6 @@
         {% endblock %}
         </div>
     </body>
-    {% include "footer.twig" %}
+    {% include "./proj/proj-footer.html.twig" %}
     
 </html>
