--- a/templates/proj/home.html.twig
+++ b/templates/proj/home.html.twig
@@ -70,7 +70,7 @@
                 </a>
             </div>
             <div class="inside-box">
-                <h3 class="center">Doc</h3>
+                <h3 class="center">About</h3>
                 <a href="{{ url("proj-doc") }}">
                     <img class="sm-img-circle" src="{{ asset("img/doc.png") }}" alt="Play button">
                 </a>
