--- a/templates/proj/show.html.twig
+++ b/templates/proj/show.html.twig
@@ -1,11 +1,12 @@
 {% extends "./proj/bg-base.html.twig" %}
 
-{% block title %}Show All{% endblock %}
+{% block title %}Leaderboard{% endblock %}
 
 {% block body %}
-
 <div>
+   
 <table id="leaderboard">
+    <caption>Leaderboard</caption>
     <thead>
         <tr>
             <th>Namn</th>
