--- a/public/css/proj.css
+++ b/public/css/proj.css
@@ -221,27 +221,45 @@ nav .start-blog, a:nth-child(3):hover~.animation {
     border-collapse: collapse;
     width: 100%;
     color: bisque;
-  }
+}
   
-  #leaderboard td, #leaderboard th {
-    border: 1px solid #ddd;
-    padding: 8px;
+#leaderboard td, #leaderboard th {
+border: 1px solid #ddd;
+padding: 8px;
+background-color: rgb(5, 102, 20);
+}
+
+#leaderboard tr:nth-child(even){background-color: #f2f2f2;}
+
+#leaderboard tr:hover {background-color: rgb(222, 150, 150);}
+
+#leaderboard th {
+padding-top: 12px;
+padding-bottom: 12px;
+text-align: left;
+background-color: #04AA6D;
+color: white;
+}
+#leaderboard caption {
+    font-size: xx-large;
+    font-weight: bolder;
+    text-shadow: 5px 0 0 black;
+}
+
+.col-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    margin: 50px;
+    color: bisque;
+}
+
+.info-col {
+    text-align: center;
+    border: 4px solid rgb(23, 157, 9);
+    border-radius: 8px;
     background-color: rgb(5, 102, 20);
-  }
-  
-  #leaderboard tr:nth-child(even){background-color: #f2f2f2;}
-  
-  #leaderboard tr:hover {background-color: rgb(222, 150, 150);}
-  
-  #leaderboard th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #04AA6D;
-    color: white;
-  }
-  #leaderboard caption {
-      font-size: xx-large;
-      font-weight: bolder;
-      text-shadow: 5px 0 0 black;
-  }
+}
+.info-col a{
+   color: inherit;
+}
