--- a/templates/proj/about.html.twig
+++ b/templates/proj/about.html.twig
@@ -51,5 +51,10 @@
         </p>
     </div>
 
+    <div class="info-col">
+        <h1>Reset</h1>
+        Reset Database : <a href="{{url('reset') }}"> Här!</a>
+    </div>
+
 </div>
 {% endblock %}
