--- a/public/css/proj.css
+++ b/public/css/proj.css
@@ -263,3 +263,9 @@ color: white;
 .info-col a{
    color: inherit;
 }
+
+.reset {
+    color: bisque;
+    margin-top: 30px;
+    max-width: 200px;
+}
