--- a/templates/proj/base.html.twig
+++ b/templates/proj/base.html.twig
@@ -13,7 +13,7 @@
             <nav class="navbar">
                 <a href="{{ url("home") }}"> Home</a>
                 <a href="{{ url("proj-home") }}"> Square </a>
-                <a href="{{ url("leaderboard_show_all") }}"> Leaderboard </a>
+                <a href="{{ url("leaderboard") }}"> Leaderboard </a>
                 <div class="animation start-home"></div>
             </nav>
         </header>
